@@ -539,7 +539,7 @@ selfupdate_write_file(struct selfupdate* se, struct http_get* hg)
 #ifdef HOOKS_OSX
 	char* dirname = UIDIR"/";
 #elif defined(USE_WINSOCK)
-	char* dirname = lookup_reg_str("Software\\Unbound", "InstallLocation");
+	char* dirname = w_lookup_reg_str("Software\\Unbound", "InstallLocation");
 	if(!dirname) dirname = strdup(UIDIR"\\");
 	if(!dirname) { log_err("out of memory"); return 0; }
 #else /* UNIX */
@@ -728,6 +728,39 @@ void selfupdate_outq_done(struct selfupdate* se, struct outq* outq,
 	}
 }
 
+#ifdef USE_WINSOCK
+/* run software updater on windows: create the process */
+static void win_run_updater(char* filename)
+{
+	char* ubdir = w_lookup_reg_str("Software\\Unbound", "InstallLocation");
+	char cmdline[1024];
+	STARTUPINFO sinfo;
+	PROCESS_INFORMATION pinfo;
+	memset(&pinfo, 0, sizeof(pinfo));
+	memset(&sinfo, 0, sizeof(sinfo));
+	sinfo.cb = sizeof(sinfo);
+	if(!ubdir) {
+		log_err("out of memory or improper registry in reinstall, "
+			"please reinstall manually");
+		return;
+	}
+	/* case sensitive /S and /D. /D must be last on the line and without
+	   quotes (even if there are spaces in the path) */
+	snprintf(cmdline, sizeof(cmdline), "\"%s\" /S /delself /D=%s", filename, ubdir);
+	free(ubdir);
+	if(!CreateProcess(NULL, cmdline, NULL, NULL, 0,
+		CREATE_NO_WINDOW, NULL, NULL, &sinfo, &pinfo))
+		log_err("CreateProcess Error");
+	else {
+		/* we do not wait for this, it will attempt to stop the
+		   service to update this executable, so we need to go back
+		   to our runloop */
+		CloseHandle(pinfo.hProcess);
+		CloseHandle(pinfo.hThread);
+	}
+}
+#endif /* USE_WINSOCK */
+
 /** do the software update install (system specific) */
 static void
 selfupdate_do_install(struct selfupdate* se)
@@ -742,7 +775,12 @@ selfupdate_do_install(struct selfupdate* se)
 	}
 #ifdef USE_WINSOCK
 	/* fork and exec the installer that will stop this program and update*/
-	/* TODO */
+	win_run_updater(se->filename);
+	/* this stops the filename from being deleted when we exit,
+	 * the installer deletes itself (with after reboot flag). */
+	free(se->filename);
+	se->filename = NULL;
+	se->file_available = 0;
 #elif defined(HOOKS_OSX)
 	/* fork and exec installer */
 	/* TODO */
